--- a/src/common/stylus/variable.styl
+++ b/src/common/stylus/variable.styl
@@ -10,6 +10,9 @@ $color-text = #fff
 $color-text-d = rgba(255, 255, 255, 0.3)
 $color-text-l = rgba(255, 255, 255, 0.5)
 $color-text-ll = rgba(255, 255, 255, 0.8)
+$color-rank-g = #ffd332
+$color-rank-s = #c9c9c9
+$color-rank-c = #fdb61b
 
 //字体定义规范
 $font-size-small-s = 10px
